--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,10 +16,11 @@ Imports:
     Rtsne,
     tibble,
     tidyr,
-    tidytext
+    tidytext,
+    purrr
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.0.1.9000
+RoxygenNote: 6.1.0
 Suggests: 
     covr,
     testthat
