--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,10 +17,13 @@ Imports:
     tibble,
     tidyr,
     tidytext,
-    purrr
+    purrr,
+    forcats
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.1.0
+RoxygenNote: 7.0.2
 Suggests: 
     covr,
-    testthat
+    testthat,
+    parsnip,
+    ranger
