add many things

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,12 @@ S3method(viz_prob_distribution,default)
 S3method(viz_prob_distribution,model_fit)
 export("%>%")
 export(viz_classbalance)
+export(viz_decision_boundary)
 export(viz_dispersion)
 export(viz_pca)
+export(viz_pcacm)
 export(viz_prob_distribution)
+export(viz_residuals)
 export(viz_tsne)
 importFrom(dplyr,everything)
 importFrom(dplyr,mutate)
