corrent import froms

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,10 +11,40 @@ export(viz_pcacm)
 export(viz_prob_distribution)
 export(viz_residuals)
 export(viz_tsne)
+importFrom(dplyr,all_of)
+importFrom(dplyr,arrange)
+importFrom(dplyr,bind_cols)
+importFrom(dplyr,desc)
 importFrom(dplyr,everything)
+importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
+importFrom(dplyr,pull)
+importFrom(dplyr,select)
+importFrom(dplyr,slice)
+importFrom(dplyr,summarize)
+importFrom(forcats,fct_relevel)
+importFrom(forcats,fct_rev)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,aes_string)
+importFrom(ggplot2,geom_abline)
+importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_raster)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_fill_gradient2)
+importFrom(ggplot2,theme_minimal)
 importFrom(magrittr,"%>%")
+importFrom(parsnip,augment)
+importFrom(readr,parse_number)
 importFrom(rlang,.data)
 importFrom(rlang,enquo)
 importFrom(rlang,quo_name)
+importFrom(rlang,set_names)
+importFrom(stats,prcomp)
+importFrom(stats,predict)
+importFrom(stats,var)
+importFrom(tibble,rownames_to_column)
+importFrom(tibble,tibble)
 importFrom(tidyr,pivot_longer)
+importFrom(utils,globalVariables)
