--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,13 +18,17 @@ Imports:
     tidyr,
     tidytext,
     purrr,
-    forcats
+    forcats,
+    readr,
+    workflows,
+    parsnip (>= 0.1.5.9000)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1.9000
 Suggests: 
     covr,
     testthat,
-    parsnip,
     ranger
 URL: https://emilhvitfeldt.github.io/horus
+Remotes:  
+    tidymodels/parsnip
