--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,34 +1,40 @@
 Package: horus
 Title: Visual Tools To Help Machine Learning model Selection
 Version: 0.0.0.9000
-Authors@R: person("Emil", "hvitfeldt", , "emilhhvitfeldt@gmail.com", c("aut", "cre"))
-Description: Includes a suite of functions that visually aids the understanding
-    and model selection of a wide array of machine learning applications.
+Authors@R: 
+    person(given = "Emil",
+           family = "Hvitfeldt",
+           role = c("aut", "cre"),
+           email = "emilhhvitfeldt@gmail.com",
+           comment = c(ORCID = "0000-0002-0679-1945"))
+Description: Includes a suite of functions that visually aids
+    the understanding and model selection of a wide array of machine
+    learning applications.
 License: MIT + file LICENSE
+URL: https://emilhvitfeldt.github.io/horus
 Depends: 
     R (>= 2.10)
 Imports: 
     dplyr,
+    forcats,
     ggplot2,
     glue,
     magrittr,
+    parsnip (>= 0.1.5.9000),
+    purrr,
+    readr,
     rlang,
     Rtsne,
     tibble,
     tidyr,
     tidytext,
-    purrr,
-    forcats,
-    readr,
-    workflows,
-    parsnip (>= 0.1.5.9000)
+    workflows
+Suggests: 
+    covr,
+    ranger,
+    testthat
+Remotes: 
+    tidymodels/parsnip
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1.9000
-Suggests: 
-    covr,
-    testthat,
-    ranger
-URL: https://emilhvitfeldt.github.io/horus
-Remotes:  
-    tidymodels/parsnip
