--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,10 +30,13 @@ importFrom(ggplot2,aes_string)
 importFrom(ggplot2,geom_abline)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_raster)
+importFrom(ggplot2,geom_text)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,guide_legend)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_fill_gradient2)
 importFrom(ggplot2,theme_minimal)
+importFrom(glue,glue)
 importFrom(magrittr,"%>%")
 importFrom(parsnip,augment)
 importFrom(readr,parse_number)
