--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,43 +11,69 @@ export(viz_pcacm)
 export(viz_prob_distribution)
 export(viz_residuals)
 export(viz_tsne)
+importFrom(Rtsne,Rtsne)
 importFrom(dplyr,all_of)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
+importFrom(dplyr,count)
 importFrom(dplyr,desc)
 importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
+importFrom(dplyr,mutate_)
 importFrom(dplyr,pull)
+importFrom(dplyr,recode)
+importFrom(dplyr,row_number)
 importFrom(dplyr,select)
+importFrom(dplyr,select_)
 importFrom(dplyr,slice)
 importFrom(dplyr,summarize)
+importFrom(forcats,fct_infreq)
+importFrom(forcats,fct_lump)
 importFrom(forcats,fct_relevel)
 importFrom(forcats,fct_rev)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,aes_)
 importFrom(ggplot2,aes_string)
+importFrom(ggplot2,arrow)
+importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,geom_abline)
+importFrom(ggplot2,geom_bar)
+importFrom(ggplot2,geom_histogram)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_raster)
+importFrom(ggplot2,geom_segment)
 importFrom(ggplot2,geom_text)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,guide_legend)
+importFrom(ggplot2,guides)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_fill_gradient2)
+importFrom(ggplot2,scale_y_discrete)
 importFrom(ggplot2,theme_minimal)
+importFrom(ggplot2,unit)
+importFrom(ggplot2,xlim)
 importFrom(glue,glue)
 importFrom(magrittr,"%>%")
 importFrom(parsnip,augment)
+importFrom(purrr,map)
 importFrom(readr,parse_number)
 importFrom(rlang,.data)
+importFrom(rlang,abort)
 importFrom(rlang,enquo)
+importFrom(rlang,ensym)
+importFrom(rlang,eval_tidy)
 importFrom(rlang,quo_name)
 importFrom(rlang,set_names)
 importFrom(stats,prcomp)
 importFrom(stats,predict)
 importFrom(stats,var)
+importFrom(tibble,as_tibble)
 importFrom(tibble,rownames_to_column)
 importFrom(tibble,tibble)
+importFrom(tidyr,drop_na)
+importFrom(tidyr,nest)
 importFrom(tidyr,pivot_longer)
+importFrom(tidyr,unnest)
 importFrom(utils,globalVariables)
