--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export("%>%")
 export(viz_classbalance)
 export(viz_decision_boundary)
 export(viz_dispersion)
+export(viz_fitted_line)
 export(viz_pca)
 export(viz_pcacm)
 export(viz_prob_distribution)
@@ -41,6 +42,7 @@ importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,geom_abline)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_histogram)
+importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_raster)
 importFrom(ggplot2,geom_segment)
