--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(viz_fitted_line)
 export(viz_pca)
 export(viz_pcacm)
 export(viz_prob_distribution)
+export(viz_prob_region)
 export(viz_residuals)
 export(viz_tsne)
 importFrom(Rtsne,Rtsne)
