--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ importFrom(ggplot2,aes_)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,arrow)
 importFrom(ggplot2,facet_grid)
+importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_abline)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_histogram)
@@ -49,6 +50,7 @@ importFrom(ggplot2,ggplot)
 importFrom(ggplot2,guide_legend)
 importFrom(ggplot2,guides)
 importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_alpha)
 importFrom(ggplot2,scale_fill_gradient2)
 importFrom(ggplot2,scale_y_discrete)
 importFrom(ggplot2,theme_minimal)
